Cleanup: Use StandardCharsets (#350)
- replace Charset.forName("UTF-8") by StandardCharsets.UTF_8
   Used Open Rewrite Recipe org.openrewrite.staticanalysis.UseStandardCharset
- replace "UTF" by StandardCharsets.UTF_8
- adjusted exception handling, mainly because `UnsupportedEncodingException` is not used anymore

related to #88, #348